# genviz-rs

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
examples/: edit_image.rs  generate_image.rs  generate_video.rs  multi_provider.rs
src/: error.rs  lib.rs  mcp.rs
src/image/: mod.rs  provider.rs  types.rs
src/image/providers/: fal.rs  flux.rs  gemini.rs  grok.rs  kling.rs  mod.rs  openai.rs
src/video/: mod.rs  provider.rs  types.rs
src/video/providers/: fal.rs  grok.rs  kling.rs  minimax.rs  mod.rs  openai.rs  veo.rs
